--- a/publications.html
+++ b/publications.html
@@ -374,7 +374,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol start="26" style="width:42em; text-align: left">
+<ol start="27" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
@@ -434,13 +434,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="31" style="width:42em; text-align: left">
+<ol start="32" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="33" style="width:42em; text-align: left">
+<ol start="34" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#355;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -449,7 +449,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="34" style="width:42em; text-align: left">
+<ol start="35" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
@@ -479,7 +479,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="35" style="width:42em; text-align: left">
+<ol start="36" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -528,7 +528,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="38" style="width:42em; text-align: left">
+<ol start="39" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#355;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -537,25 +537,9 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<h3>Recent Drafts</h3>
-<ol start="39" style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-    Kenji Maillard,
-    Danel Ahman,
-    Robert Atkey,
-    Guido Martinez,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Exequiel Rivas, and
-    Éric Tanter.
-    <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
-    arXiv:1903.01237. March, 2019.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
-      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
-    </ul>
-  </li>
-</ol>
+<!-- <h3>Recent Drafts</h3> -->
+<!-- <ol start="40" style="width:42em; text-align: left"> -->
+<!-- </ol> -->
 
 <h3>Informal Publications and Workshops</h3>
 <ol start="40" style="width:42em; text-align: left">
