--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School on <br/>Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
   <ul>
   <li>Application deadline: 10 May 2019</li>
   <li>School: 24-31 August 2019 at INSA, Lyon, France</li>
