--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Won a Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for our "<a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a>" paper, May 2019</b>
+  </li>
+
+
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
   <ul>
   <li>Application deadline: 10 May 2019</li>
