--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Won a Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a></b> for our<br/> <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a> paper, May 2019
+  <li style="margin-bottom: 1ex;"><b>Won a Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a></b> for our <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a> paper
   </li>
 
 
