--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@ young researchers, and engineers:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     To appear in <a href="https://web.stevens.edu/csf2019/index.html">32nd
     IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
+    <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
       <li>A previous extended abstract was called
