--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@ young researchers, and engineers:
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
-      <li>A previous extended abstract was called
-          <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
+      <!-- <li>A previous extended abstract was called -->
+      <!--     <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li> -->
     </ul>
   </li>
 
