--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,7 @@
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
+    <b>Distinguished Paper Award</b>.
   </li>
 
   <li style="margin-bottom: 1ex;">
