--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming:</b> <a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019, 24-31 August 2019 at INSA, Lyon, France</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming:</b> <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019, 24-31 August 2019 at INSA, Lyon, France</a>
   </li>
 
 
