--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
   <ul>
-  <li>Application deadline: 10 May 2019</li>
+  <!-- <li>Application deadline: 17 May 2019</li> -->
   <li>School: 1-5 July 2019 at University of Luxembourg</li>
   </ul>
   </li>
