--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
   <ul>
-  <li>Abstract Deadline: 16 October 2019</li>
-  <li>Submission Deadline: 21 October 2019</li>
+  <li>Abstract deadline: 16 October 2019</li>
+  <li>Submission deadline: 21 October 2019</li>
   <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li>
   </ul>
   </li>
