--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
   <ul>
-  <li>Application deadline: 26 May 2019</li>
+  <li>Application deadline: 30 June 2019</li>
   <li>School: 24-31 August 2019 at INSA, Lyon, France</li>
   </ul>
   </li>
@@ -154,7 +154,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
   <ul>
-  <li>Submission deadline: 21 May 2019</li>
+  <!-- <li>Submission deadline: 21 May 2019</li> -->
   <li>Conference: 8-11 October 2019, Porto, Portugal</li>
   </ul>
   </li>
