--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ young researchers, and engineers:
     August 2019.
     <ul style="font-size: small">
       <li><a href="https://github.com/FStarLang/FStar/tree/dm4all/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
-      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization in Coq</a>
     </ul>
   </li>
 
