--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, starting in fall 2019)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, starting in September 2019)</li>
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
 
 </ul>
@@ -661,6 +661,15 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
 
+  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Upcoming:</b> <a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <!--a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a--> (2019-06-27)</li>
+      <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
+    </ul>
+
+  </li>
+
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
     </ul>
@@ -668,14 +677,6 @@ young researchers, and engineers:
     <ul style="font-size: small">
       <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
-
-  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
-
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
-    </ul>
-
-  </li>
 
   <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
 
