--- a/index.html
+++ b/index.html
@@ -667,6 +667,22 @@ young researchers, and engineers:
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> MPI-SWS, Saarbrücken: <a href="">slides</a> (2019-05)<li>
+      <li>CASA-MPI Distinguished Lecture at Ruhr University Bochm: <a href="">slides</a> (2019-05)<li>
+      <li><a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
+      <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
+      <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
+      <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
+      <li><a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
+IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a>, <b><a href="https://videos-rennes.inria.fr/video/BkHzYy-jM">video</a></b> (2018-02-05)</li>
+      <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
+      <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
+      <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
@@ -685,20 +701,6 @@ young researchers, and engineers:
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
-      <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
-      <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
-      <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
-      <li><a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
-IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a>, <b><a href="https://videos-rennes.inria.fr/video/BkHzYy-jM">video</a></b> (2018-02-05)</li>
-      <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
-      <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
-      <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
-    </ul>
   </li>
 
   <li style="margin-bottom: 1ex"><em>What is secure compilation?</em>
