--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href=""></a></b> (PC member)
+  <ul>
+  <li>Submission deadlines(!): 4 October 2019 and 7 February 2020</li>
+  <li>Conference: June 2020, Boston, MA, USA</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
   <ul>
   <li>Seminar: 10-15 May, 2020, Schloss Dagstuhl, Germany</li>
