--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Computer Security Foundations Symposium<b><a href=""></a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://web.stevens.edu/csf2019/cfp-2020.html">Computer Security Foundations, CSF 2020</a></b> (PC member)
   <ul>
   <li>Submission deadlines(!): 4 October 2019 and 7 February 2020</li>
   <li>Conference: June 2020, Boston, MA, USA</li>
