--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://web.stevens.edu/csf2019/cfp-2020.html">Computer Security Foundations, CSF 2020</a></b> (PC member)
   <ul>
-  <li>Submission deadlines(!): 4 October 2019 and 7 February 2020</li>
+  <li>Submission deadlines(!): <b>4 October 2019</b> and <b>7 February 2020</b></li>
   <li>Conference: June 2020, Boston, MA, USA</li>
   </ul>
   </li>
