--- a/index.html
+++ b/index.html
@@ -514,6 +514,18 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;">
     Kenji Maillard,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Exequiel Rivas, and
+    Antoine Van Muylder.
+    <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
+    arXiv:1907.05244. July 2019.
+    <ul style="font-size: small">
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept formalization in Coq</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
     Danel Ahman,
     Robert Atkey,
     Guido Martinez,
