--- a/index.html
+++ b/index.html
@@ -525,6 +525,22 @@ young researchers, and engineers:
   </li>
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Ștefan Ciobâcă,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Marco Patrignani,
+    Éric Tanter, and
+    Jérémy Thibault.
+    <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
+    arXiv:1907.05320. Jult 2019.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation#relational">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Kenji Maillard,
     Danel Ahman,
     Robert Atkey,
@@ -628,22 +644,23 @@ young researchers, and engineers:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">
-    Niklas Grimm,
-    Kenji Maillard,
-    Cédric Fournet,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Matteo Maffei,
-    Jonathan Protzenko,
-    Tahina Ramananandro,
-    Aseem Rastogi,
-    Nikhil Swamy, and
-    Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
-    In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 130--145, January 2018  <ul style="font-size: small">
-    <li><a href="https://github.com/FStarLang/FStar/tree/master/examples/rel">Code for the examples</a></li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   Niklas Grimm, -->
+  <!--   Kenji Maillard, -->
+  <!--   Cédric Fournet, -->
+  <!--   C&#259;t&#259;lin Hri&#355;cu, -->
+  <!--   Matteo Maffei, -->
+  <!--   Jonathan Protzenko, -->
+  <!--   Tahina Ramananandro, -->
+  <!--   Aseem Rastogi, -->
+  <!--   Nikhil Swamy, and -->
+  <!--   Santiago Zanella-Béguelin. -->
+  <!--   <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>. -->
+  <!--   In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 130--145, January 2018  <ul style="font-size: small"> -->
+  <!--   <li><a href="https://github.com/FStarLang/FStar/tree/master/examples/rel">Code for the examples</a></li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
+
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--    Alejandro Aguirre, -->
   <!--    C&#259;t&#259;lin Hri&#355;cu, -->
