--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@ young researchers, and engineers:
     Éric Tanter, and
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
-    arXiv:1907.05320. Jult 2019.
+    arXiv:1907.05320. July 2019.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation#relational">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
     </ul>
   </li>
 
