--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ young researchers, and engineers:
     Aseem Rastogi,
     Nikhil Swamy,
     <b><a href="https://fstar-lang.org/papers/metafstar">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
-   In <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, pages 30-59. Springer, 2019.
+   In <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, pages 30-59. Springer, May 2019.
   </li>
 
   <li style="margin-bottom: 1ex;">
