--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ young researchers, and engineers:
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
-    To appear in <a href="https://web.stevens.edu/csf2019/index.html">32nd
+    In <a href="https://web.stevens.edu/csf2019/index.html">32nd
     IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
