--- a/index.html
+++ b/index.html
@@ -124,16 +124,9 @@ could contribute:
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
-  <ul>
-  <!-- <li>Application deadline: 17 May 2019</li> -->
-  <li>School: 1-5 July 2019 at University of Luxembourg</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
   <ul>
-  <li>Application deadline: 30 June 2019</li>
+  <!-- <li>Application deadline: 30 June 2019</li> -->
   <li>School: 24-31 August 2019 at INSA, Lyon, France</li>
   </ul>
   </li>
@@ -172,6 +165,13 @@ could contribute:
   <!-- <li>Submission deadline: 22 April 2019</li> -->
   <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
+  <!-- <ul> -->
+  <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
+  <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
