--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Chair)</b>
   <ul>
   <li>Abstract deadline: 16 October 2019</li>
   <li>Submission deadline: 21 October 2019</li>
