--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ could contribute:
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
   <ul>
   <!-- <li>Application deadline: 30 June 2019</li> -->
   <li>School: 24-31 August 2019 at INSA, Lyon, France</li>
@@ -806,7 +806,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming:</b> <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming:</b> <b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
   </li>
 
 
