--- a/index.html
+++ b/index.html
@@ -124,13 +124,6 @@ could contribute:
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
-  <ul>
-  <!-- <li>Application deadline: 30 June 2019</li> -->
-  <li>School: 24-31 August 2019 at INSA, Lyon, France</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Chair)</b>
   <ul>
   <li>Abstract deadline: 16 October 2019</li>
@@ -165,6 +158,13 @@ could contribute:
   <!-- <li>Submission deadline: 22 April 2019</li> -->
   <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
+  <!-- <ul> -->
+  <!-- <\!-- <li>Application deadline: 30 June 2019</li> -\-> -->
+  <!-- <li>School: 24-31 August 2019 at INSA, Lyon, France</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
