--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference Computer and Communications Security, CCS 2018</a> (PC member)
-  <!-- <ul> -->
-  <!-- <\!-- <li>Submission deadline: 8 May, 2018</li> -\-> -->
-  <!-- <li>Conference: 15-19 October 2018, Toronto, Canada</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference Computer and Communications Security, CCS 2018</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Submission deadline: 8 May, 2018</li> -\\-> -\-> -->
+  <!-- <\!-- <li>Conference: 15-19 October 2018, Toronto, Canada</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a>
-  <!-- <ul> -->
-  <!-- <li>Application deadline: 4 July, 2018</li> -->
-  <!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a> -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Application deadline: 4 July, 2018</li> -\-> -->
+  <!-- <\!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
 
@@ -210,17 +210,17 @@ could contribute:
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium, FROM 2018</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
-  <!-- <ul> -->
-  <!-- <li>Conference: June 18-20, 2018. Iasi, Romania</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium, FROM 2018</a> (Invited Speaker<\!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -\->) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Conference: June 18-20, 2018. Iasi, Romania</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
-  <!-- <ul> -->
-  <!-- <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b> -->
   <!-- <\!-- <ul> -\-> -->
@@ -228,27 +228,27 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Abstract deadline: 13 October 2017</li> -\\-> -\-> -->
+  <!-- <\!-- <\\!-- <li>Submission deadline: 20 October 2017</li> -\\-> -\-> -->
+  <!-- <\!-- <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- <\!-- </li> -\-> -->
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</a> (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Submission deadline: August 15, 2017</li> -\\-> -\-> -->
+  <!-- <\!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- <\!-- </li> -\-> -->
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC @ POPL 2018</a> (PC Chair, Co-organizer) -->
   <!-- <ul> -->
-  <!-- <\!-- <li>Abstract deadline: 13 October 2017</li> -\-> -->
-  <!-- <\!-- <li>Submission deadline: 20 October 2017</li> -\-> -->
-  <!-- <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li> -->
+  <!-- <\!-- <li>Submission deadline: 18 October 2017</li> -\-> -->
+  <!-- <\!-- <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li> -\-> -->
   <!-- </ul> -->
   <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</a> (PC member)
-  <!-- <ul> -->
-  <!-- <\!-- <li>Submission deadline: August 15, 2017</li> -\-> -->
-  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
-  <!-- </ul> -->
-  <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC @ POPL 2018</a> (PC Chair, Co-organizer)
-  <ul>
-  <!-- <li>Submission deadline: 18 October 2017</li> -->
-  <!-- <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li> -->
-  </ul>
-  </li>
 
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>) -->
