--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://web.stevens.edu/csf2019/cfp-2020.html">Computer Security Foundations, CSF 2020</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a></b> (PC member)
   <ul>
   <li><b>Submission deadlines(!): 4 October 2019 and 7 February 2020</b></li>
   <li>Conference: June 2020, Boston, MA, USA</li>
