--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ In the fall of 2016 I held a Visiting Researcher position at
 I received my PhD
 <!--(summa cum laude)-->
 from <a href="https://saarland-informatics-campus.de/en/forschung-research/">Saarland
-University</a> in Saarbrücken, Germany.
+University</a> in Saarbrücken, Germany
+and recently also a Habilitation from <a href="https://www.di.ens.fr/">ENS Paris</a>.
 <!--  where I -->
 <!-- <\!-- was a member of -->
 <!-- the <a href="http://www.infsec.cs.uni-saarland.de/">Information -->
