--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
-  <ul>
+  <!-- <ul> -->
   <!-- <li>Abstract deadline: 15 April 2019</li> -->
   <!-- <li>Submission deadline: 22 April 2019</li> -->
-  <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
-  </ul>
+  <!-- <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
