--- a/index.html
+++ b/index.html
@@ -696,6 +696,13 @@ young researchers, and engineers:
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Dijkstra Monads for All</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Everest All Hands</a>: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
+    </ul>
+  </li>
+  
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
