--- a/index.html
+++ b/index.html
@@ -696,10 +696,19 @@ young researchers, and engineers:
 
 <ul style="width:42em; text-align: left">
 
+/home/hritcu/Inria/www-hritcu/talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf
+
+  <li style="margin-bottom: 1ex;"><em>The Next 700 Relational Program Logics</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Everest All Hands: <a href="talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf">slides</a> (2019-10-11)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Dijkstra Monads for All</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> Everest All Hands</a>: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
+      <li><b>Recent:</b> Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
     </ul>
   </li>
   
