--- a/index.html
+++ b/index.html
@@ -774,44 +774,44 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a>
+  <!-- <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> -->
 
-    <ul style="font-size: small">
-      <li>Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
-    </ul>
+  <!--   <ul style="font-size: small"> -->
+  <!--     <li>Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li> -->
+  <!--   </ul> -->
 
-  </li>
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a>
+  <!-- <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> -->
 
-    <ul style="font-size: small">
-      <li><a href="https://www.france-science.org/FADEx-2017-Cybersecurity-EN.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
-    </ul>
+  <!--   <ul style="font-size: small"> -->
+  <!--     <li><a href="https://www.france-science.org/FADEx-2017-Cybersecurity-EN.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li> -->
+  <!--   </ul> -->
 
-  </li>
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a>
+  <!-- <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> -->
 
-    <ul style="font-size: small">
-      <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
-    </ul>
+  <!--   <ul style="font-size: small"> -->
+  <!--     <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li> -->
+  <!--   </ul> -->
 
-  </li>
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a>
+  <!-- <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> -->
 
-    <ul style="font-size: small">
-      <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
-      <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
-      <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
-      <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
-      <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li>
-      <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
-      <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
-      <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
-    </ul>
-  </li>
+  <!--   <ul style="font-size: small"> -->
+  <!--     <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li> -->
+  <!--     <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li> -->
+  <!--     <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li> -->
+  <!--     <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li> -->
+  <!--     <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li> -->
+  <!--     <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li> -->
+  <!--     <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li> -->
+  <!--     <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li> -->
+  <!--     <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li> -->
+  <!--   </ul> -->
+  <!-- </li> -->
 
 </ul>
 
