--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: 21 May 2019</li> -->
-  <li>Conference: 8-11 October 2019, Porto, Portugal</li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><\!-- International Conference on  -\->Runtime Verification, RV 2019</a></b> (PC member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: 21 May 2019</li> -\-> -->
+  <!-- <li>Conference: 8-11 October 2019, Porto, Portugal</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
   <!-- <ul> -->
