--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ could contribute:
   </ul>
   </li>
 
-  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><\!-- International Conference on  -\->Runtime Verification, RV 2019</a></b> (PC member) -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: 21 May 2019</li> -\-> -->
   <!-- <li>Conference: 8-11 October 2019, Porto, Portugal</li> -->
