--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ young researchers, and engineers:
   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher)</li>
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Engineer)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Engineer)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University)</li>
 
