--- a/students.html
+++ b/students.html
@@ -24,7 +24,8 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> since 2017-01: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+    <li style="margin-top: 1ex;">PhD student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
+  <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">Principles of Program Verification for Arbitrary Monadic Effects</a></li>
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
 
@@ -69,6 +70,16 @@
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher)</li>
+<!-- http://perso.ens-lyon.fr/adrien.durier -->
+
+  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a></li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> starting 2019-05:<br/>
+    Relational Dijkstra Monads</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, since 2018-07:<br/>
@@ -78,21 +89,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a></li>
-  <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> starting 2019-05:<br/>
-    Relational Dijkstra Monads</li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
-  <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-11:<br/>
-    Towards Formally Secure Compartmentalization for C</li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-04 to 2018-10:<br/>
-    Memory Sharing for a Compartmentalizing Compiler</li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>]</div></li>
+  <li style="margin-bottom: 1ex;"><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer<!--, starting in August 2019-->)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
 
@@ -103,6 +100,16 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-11 to 2019-10:<br/>
+    Towards Formally Secure Compartmentalization for C</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-04 to 2018-10:<br/>
+    Memory Sharing for a Compartmentalizing Compiler</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a>
   <ul>
