--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ young researchers, and engineers:
     Exequiel Rivas, and
     Antoine Van Muylder.
     <b><a href="https://arxiv.org/abs/1907.05244">The Next 700 Relational Program Logics</a></b>.
-    arXiv:1907.05244. Conditionally accepted at POPL 2020.
+    arXiv:1907.05244. To appear at POPL 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
     </ul>
