--- a/index.html
+++ b/index.html
@@ -716,7 +716,8 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
+      <li><b>Recent:</b> <a href="https://www.cse.chalmers.se/research/group/security/talk/css-talk27/">Chalmers Security Seminar</a>: <a href="talks/2019-12-05-When-Good-Components-Go-Bad-Chalmers.pdf">slides</a> (2019-12-05)</li>
+      <li><a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
       <li>MPI-SWS, Saarbrücken: <a href="talks/2019-05-23-When-Good-Components-Go-Bad-Saarbruecken.pdf">slides</a> (2019-05-23)</li>
       <li>CASA-MPI Distinguished Lecture at Ruhr University Bochm: <a href="talks/2019-05-13-When-Good-Components-Go-Bad-Bochum.pdf">slides</a> (2019-05-13)</li>
       <li><a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
