--- a/students.html
+++ b/students.html
@@ -22,13 +22,6 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
-  <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">Principles of Program Verification for Arbitrary Monadic Effects</a></li>
-  </ul>
-  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
-
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-06:<br/>
@@ -100,6 +93,13 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a>
+  <ul>
+    <li style="margin-top: 1ex;"><b> Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
+  <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">Principles of Program Verification for Arbitrary Monadic Effects</a></li>
+  </ul>
+  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
+
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
@@ -137,7 +137,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
-    <li style="margin-top: 1ex;">Graduated PhD student at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
+    <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
       <a href="http://www.seas.upenn.edu/~aarthur/thesis.pdf">A Methodology for Micro-Policies</a></li>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
       <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
