--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer<!--, starting in August 2019-->)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li> -->
 
 </ul>
 
