--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ young researchers, and engineers:
 
 </ul>
 
-<p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
+<p>For a complete list of present and past members of my group please look <a href="group.html">here</a>.</p>
 
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
