--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ young researchers, and engineers:
     Éric Tanter, and
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
-    arXiv:1907.05320. July 2019.
+    arXiv:1907.05320. To appear at ESOP 2020.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
     </ul>
